--- a/.github/workflow/divit03.yml
+++ b/.github/workflow/divit03.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - docker-build
+      - bocker-build
 
 jobs:
   build-and-push:
